--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "generate-data": "node --loader ts-node/esm scripts/generateEncryptedData.ts",
+    "prebuild": "npm run generate-data"
   },
   "dependencies": {
     "@astrojs/react": "^4.1.2",
     "@astrojs/tailwind": "^5.1.4",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^19.0.3",
     "@types/react-dom": "^19.0.2",
     "astro": "^5.1.3",
+    "crypto-js": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2"
   }
 }
