--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "generate-data": "node --loader ts-node/esm scripts/generateEncryptedData.ts",
-    "prebuild": "npm run generate-data"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/react": "^4.1.2",
